--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.2.0",
     "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-errors": "^3.1.1",
