--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,15 @@
     "@tanstack/react-query-devtools": "^5.50.1",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "moment": "^2.30.1",
     "quill": "^2.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
+    "react-intersection-observer": "^9.13.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
