--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query-devtools": "^5.50.1",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
+    "html-to-react": "^1.7.0",
     "moment": "^2.30.1",
     "quill": "^2.0.2",
     "react": "^18.3.1",
